feat: deleted categories for items
