# swagger/swagger.json
@@ -293,14 +293,14 @@
                 }
             }
         },
-        "/assets/items/categories": {
+        "/assets/items/world/{world_id}": {
             "get": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "Retrieves a list of all item categories.",
+                "description": "Retrieves an items list specific to a world ID.",
                 "consumes": [
                     "application/json"
                 ],
@@ -310,108 +310,12 @@
                 "tags": [
                     "assets-service"
                 ],
-                "summary": "Get item categories",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dtos.ItemCategoryListResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/dtos.ErrorResponse"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Creates a new item category globally.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "assets-service"
-                ],
-                "summary": "Adds a new item category",
-                "parameters": [
-                    {
-                        "description": "Category data",
-                        "name": "category",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dtos.AddItemCategoryRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/dtos.ItemCategoryResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/dtos.ErrorResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/dtos.ErrorResponse"
-                        }
-                    },
-                    "409": {
-                        "description": "Conflict",
-                        "schema": {
-                            "$ref": "#/definitions/dtos.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/assets/items/world/{world_id}/categories/{category_id}": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Retrieves an items list specific to a world ID and category ID.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "assets-service"
-                ],
-                "summary": "Get items by world and category",
+                "summary": "Get items by world",
                 "parameters": [
                     {
                         "type": "string",
                         "description": "World UUID",
                         "name": "world_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Category UUID",
-                        "name": "category_id",
                         "in": "path",
                         "required": true
                     }
@@ -443,7 +347,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Upload item IDs alongside sprite files mapping to a world and category.",
+                "description": "Upload item IDs alongside sprite files mapping to a world.",
                 "consumes": [
                     "multipart/form-data"
                 ],
@@ -459,13 +363,6 @@
                         "type": "string",
                         "description": "World UUID",
                         "name": "world_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Category UUID",
-                        "name": "category_id",
                         "in": "path",
                         "required": true
                     },
@@ -2323,21 +2220,72 @@
                     }
                 }
             }
+        },
+        "/world/{id}/zones/{zone_id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Returns data for a specific zone in a world.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "world-service"
+                ],
+                "summary": "Retrieve specific zone data",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "World UUID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Zone ID",
+                        "name": "zone_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.WorldZoneResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.ErrorResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
         "dtos.AddCosmeticCategoryRequest": {
-            "type": "object",
-            "required": [
-                "category_name"
-            ],
-            "properties": {
-                "category_name": {
-                    "type": "string"
-                }
-            }
-        },
-        "dtos.AddItemCategoryRequest": {
             "type": "object",
             "required": [
                 "category_name"
@@ -2549,28 +2497,6 @@
                     "type": "number"
                 },
                 "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
-        "dtos.ItemCategoryListResponse": {
-            "type": "object",
-            "properties": {
-                "category_list": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/dtos.ItemCategoryResponse"
-                    }
-                }
-            }
-        },
-        "dtos.ItemCategoryResponse": {
-            "type": "object",
-            "properties": {
-                "category_id": {
-                    "type": "string"
-                },
-                "category_name": {
                     "type": "string"
                 }
             }
@@ -2842,17 +2768,6 @@
                 }
             }
         },
-        "dtos.WorldZoneData": {
-            "type": "object",
-            "properties": {
-                "zone_data": {
-                    "type": "string"
-                },
-                "zone_id": {
-                    "type": "integer"
-                }
-            }
-        },
         "dtos.WorldZoneResponse": {
             "type": "object",
             "properties": {
@@ -2876,7 +2791,7 @@
                 "zones": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/dtos.WorldZoneData"
+                        "type": "integer"
                     }
                 }
             }
